# boxlite

./: .gitmodules  Cargo.toml  Makefile
.github/workflows/: build-node.yml  build-runtime.yml  build-wheels.yml  config.yml
boxlite/: Cargo.toml
boxlite-cli/: build.rs
boxlite-cli/src/: cli.rs  main.rs
boxlite-cli/src/commands/: mod.rs  pull.rs
boxlite-shared/proto/boxlite/v1/: service.proto
boxlite-shared/src/: errors.rs
boxlite/src/: lib.rs
boxlite/src/db/: boxes.rs
boxlite/src/jailer/: bwrap.rs  cgroup.rs  mod.rs  seccomp.rs
boxlite/src/litebox/: box_impl.rs  config.rs  manager.rs  state.rs
boxlite/src/litebox/init/: pipeline.rs  types.rs
boxlite/src/litebox/init/stages/: config.rs  guest.rs
boxlite/src/litebox/init/tasks/: filesystem.rs  guest_init.rs  mod.rs  vmm_spawn.rs
boxlite/src/portal/interfaces/: container.rs  guest.rs
boxlite/src/runtime/: core.rs  rt_impl.rs  types.rs
boxlite/src/vmm/: mod.rs
boxlite/src/vmm/krun/: engine.rs
boxlite/src/volumes/: container_volume.rs  guest_volume.rs  mod.rs
boxlite/tests/: lifecycle.rs
examples/node/: README.md  browserbox.js  codebox.js  computerbox.js  interactivebox.js  package.json  simplebox.js
examples/python/: claude_in_boxlite_example.py  simplebox_example.py
guest/src/service/: container.rs
guest/src/storage/: volume.rs
scripts/setup/: setup-manylinux.sh  setup-ubuntu.sh
sdks/node/: .gitignore  README.md  build.rs  package.json  tsconfig.json
sdks/node/lib/: browserbox.ts  codebox.ts  computerbox.ts  index.ts  interactivebox.ts  native.ts  simplebox.ts
sdks/node/tests/: constants.test.ts  errors.test.ts  exec.test.ts
sdks/python/: pyproject.toml
sdks/python/src/: info.rs
