[workspace]
members = [
    "boxlite",
    "boxlite-cli",
    "boxlite/deps/e2fsprogs-sys",
    "boxlite/deps/libgvproxy-sys",
    "boxlite/deps/libkrun-sys",
    "boxlite-shared",
    "guest",
    "sdks/c",
    "sdks/python",
    "sdks/node",
]
exclude = ["build/tmp", "target", ".venv", "examples/*/.venv"]

resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Dorian Zheng <https://github.com/dorianzheng>"]
license = "Apache-2.0"
